@@ -52,6 +52,7 @@ Removed
 - Removes the previously obsoleted property and class constants in ConfigurationLoader
 - Marks the obsolete HashTable classes as obsolete unusable
 - Marks the obsolete Graph() method of ITripleStore as obsolete unusable (superceded by indexer access)
+- Marks the obsolete usable IndexingHelper static class as obsolete unusable
    
 
 
